--- a/www/css/index.css
+++ b/www/css/index.css
@@ -42,20 +42,17 @@ h1 {
 }
 
 @keyframes fade {
-    from { opacity: 1.0; }
-    50% { opacity: 0.4; }
-    to { opacity: 1.0; }
-}
- 
-@-webkit-keyframes fade {
-    from { opacity: 1.0; }
-    50% { opacity: 0.4; }
-    to { opacity: 1.0; }
+    from { opacity: 1; }
+    50% { opacity: 0; }
+    to { opacity: 1; }
 }
  
 .blink {
-    animation:fade 3000ms infinite;
-    -webkit-animation:fade 3000ms infinite;
+    animation: fade 2000ms infinite;
+}
+
+.blink.fast {
+    animation: fade 900ms infinite;
 }
 
 .invalid-tip {
@@ -120,6 +117,10 @@ main {
 .vertical-center {
     margin-top: calc(40vh - 1.64rem);
     text-align: center;
+}
+
+.v-bottom {
+    vertical-align: bottom;
 }
 
 .sidenav .background img {
