--- a/www/css/index.css
+++ b/www/css/index.css
@@ -170,3 +170,48 @@ main {
     line-height: 1.5em;
     padding: 8px 0 !important;
 }
+
+.mic-wrapper {
+    margin-top: 22px;
+    text-align: right;
+}
+
+.mic-wrapper i {
+    vertical-align: sub;
+}
+
+.flex-center-aligner {
+    align-self: center;
+    align-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.input-checkbox, .input-slider {
+    margin-top: 10px;
+    margin-bottom: 15px;
+}
+
+/* TAILLE DES ELEMENTS */
+.select-wrapper + label {
+    font-size: 1rem !important;
+}
+
+[type="checkbox"] + span:not(.lever) {
+    font-size: 1.1rem;
+}
+
+label {
+    font-size: 1rem;
+}
+
+.input-field > label {
+    font-size: 1.2rem;
+}
+/* FIN TAILLE DES ELEMENTS */
+
+.modal .collection-item {
+    overflow: auto;
+    font-size: 0.95rem;
+}
