--- a/www/css/index.css
+++ b/www/css/index.css
@@ -239,6 +239,11 @@ p.smiley.big-text {
     margin-bottom: 20px;
 }
 
+.btn-small-margins {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 /* TAILLE DES ELEMENTS */
 .select-wrapper + label {
     font-size: 1rem !important;
