Minor graphical changes

--- a/server/form_creator/css/perso.css
+++ b/server/form_creator/css/perso.css
@@ -16,6 +16,10 @@ main {
     margin-bottom: 0;
 }
 
+.no-padding-bottom {
+    padding-bottom: 0 !important;
+}
+
 .valign-middle {
     vertical-align: middle;
 }
