--- a/server/form_creator/css/perso.css
+++ b/server/form_creator/css/perso.css
@@ -33,10 +33,11 @@ main {
 }
 
 .one-select-opt {
-    padding: 0 10px 15px 10px;
-    margin: 5px 0;
-    border-radius: 8px;
+    padding: 5px 10px 15px 10px;
+    margin: 10px 5px;
+    border-radius: 12px;
     border: 1px rgba(165, 165, 165, 0.329) solid;
+    background-color: rgba(232, 232, 232, 0.23);
 }
 
 .pointer {
@@ -54,5 +55,16 @@ main {
 .divider-margin {
     margin-top: 15px;
     margin-bottom: 15px;
+}
+
+.modal.bottom-sheet {
+    margin: auto;
+    border-radius: 10px 10px 0 0;
+}
+
+@media only screen and (max-width: 663px) {
+    .modal {
+        width: 90%;
+    }
 }
 
