--- a/www/css/index.css
+++ b/www/css/index.css
@@ -425,3 +425,18 @@ label, .form-audio-label {
 #__main_form__id {
     margin-bottom: 10px;
 }
+
+.remove-img-btn {
+    position: absolute;
+    top: 4px;
+    right: 4px;
+    background-color: rgba(43, 43, 43, 0.81);
+    border-radius: 30px;
+    color: white;
+    height: 24px;
+}
+
+.remove-img-btn i.material-icons {
+    margin-left: 1px;
+    text-align: center;
+}
